--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc",
-    "start": "bun dist/index.js"
+    "start": "bun index.ts"
   },
   "devDependencies": {
     "bun-types": "latest"
