--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "nanoid": "^5.0.6",
     "rimraf": "^5.0.5",
     "sib-api-v3-sdk": "^8.5.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.20"
   }
 }
