--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "gpa-backend",
   "module": "index.ts",
-  "type": "module",
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && npx tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "serve": "npx tsc && start",
-    "dev": "NODE_ENV=development concurrently \"npx tsc --watch\" \"node --watch dist/index.js\""
+    "dev": "NODE_ENV=development concurrently \"npx tsc --watch\" \"node --watch dist/server.js\""
   },
   "nodemonConfig": {
     "exec": "npm run dev",
@@ -26,12 +25,17 @@
   },
   "dependencies": {
     "concurrently": "^8.2.2",
-    "fastify": "^4.26.1",
+    "express": "^4.18.2",
     "nanoid": "^5.0.6",
     "rimraf": "^5.0.5",
     "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.20"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.10",
+    "concurrently": "^8.2.1",
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
