--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "gpa-backend",
-  "module": "index.ts",
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && npx tsc",
-    "start": "node dist/server.js",
-    "serve": "npx tsc && start",
-    "dev": "NODE_ENV=development concurrently \"npx tsc --watch\" \"node --watch dist/server.js\""
-  },
-  "nodemonConfig": {
-    "exec": "npm run dev",
-    "watch": [
-      "server/*",
-      "public/*"
-    ],
-    "ignore": [
-      "**/__tests__/**",
-      "*.test.js",
-      "*.spec.js"
-    ]
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "express": "^4.18.2",
-    "nanoid": "^5.0.6",
-    "rimraf": "^5.0.5",
-    "sib-api-v3-sdk": "^8.5.0"
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.8.10",
-    "concurrently": "^8.2.1",
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
